update: prototype world total route
